--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,9 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "jspdf": "^2.5.1",
     "vue": "^3.2.13",
+    "vue-axios": "^3.5.2",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
