--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@mdi/font": "^7.2.96",
     "bootstrap": "^5.3.0",
+    "bootstrap-icons": "^1.10.5",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
     "jspdf": "^2.5.1",
