--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,12 @@
     "@fortawesome/fontawesome-free": "^6.4.0",
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
+    "js-cookie": "^3.0.5",
     "roboto-fontface": "*",
     "vee-validate": "^4.10.5",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
+    "vue-session": "^1.0.0",
     "vuetify": "^3.0.0-beta.0",
     "webfontloader": "^1.0.0"
   },
