--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "roboto-fontface": "*",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.7.12",
     "vee-validate": "^4.10.5",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
