--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.8.3",
     "js-cookie": "^3.0.5",
     "roboto-fontface": "*",
+    "sweetalert": "^2.1.2",
     "vee-validate": "^4.10.5",
     "vue": "^3.2.13",
     "vue-chartjs": "^5.2.0",
