--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "chart.js": "^4.3.0",
     "core-js": "^3.8.3",
     "js-cookie": "^3.0.5",
+    "js-sha256": "^0.9.0",
     "jspdf": "^2.5.1",
     "roboto-fontface": "*",
     "sweetalert": "^2.1.2",
