--- a/backend/composer.json
+++ b/backend/composer.json
@@ -9,9 +9,10 @@
         "barryvdh/laravel-dompdf": "^2.0",
         "dompdf/dompdf": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
-        "laravel/framework": "^9.19",
+        "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "maatwebsite/excel": "*",
         "tymon/jwt-auth": "^2.0"
     },
     "require-dev": {
