--- a/backend/composer.json
+++ b/backend/composer.json
@@ -12,7 +12,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "maatwebsite/excel": "*",
+        "maatwebsite/excel": "^3.1",
         "tymon/jwt-auth": "^2.0"
     },
     "require-dev": {
