--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.4.0",
     "chart.js": "^4.3.0",
     "core-js": "^3.8.3",
+    "crypto-js": "^4.1.1",
     "js-cookie": "^3.0.5",
     "js-sha256": "^0.9.0",
     "jspdf": "^2.5.1",
@@ -21,6 +22,7 @@
     "vee-validate": "^4.10.5",
     "vue": "^3.2.13",
     "vue-chartjs": "^5.2.0",
+    "vue-cookies": "^1.8.3",
     "vue-router": "^4.2.4",
     "vue-session": "^1.0.0",
     "vuetify": "^3.0.0-beta.0",
