--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "vee-validate": "^4.10.5",
     "vue": "^3.2.13",
     "vue-chartjs": "^5.2.0",
+    "vue-cookies": "^1.8.3",
     "vue-router": "^4.2.4",
     "vue-session": "^1.0.0",
     "vuetify": "^3.0.0-beta.0",
