--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "js-cookie": "^3.0.5",
     "js-sha256": "^0.9.0",
     "jspdf": "^2.5.1",
+    "pinia": "^2.1.4",
     "roboto-fontface": "*",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.7.12",
