--- a/backend/package.json
+++ b/backend/package.json
@@ -9,5 +9,9 @@
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.5",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "hashids": "^2.3.0",
+        "jspdf-autotable": "^3.5.31"
     }
 }
