--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,11 @@
     "chart.js": "^4.3.0",
     "core-js": "^3.8.3",
     "crypto-js": "^4.1.1",
+    "file-saver": "^2.0.5",
     "js-cookie": "^3.0.5",
     "js-sha256": "^0.9.0",
     "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.31",
     "pinia": "^2.1.4",
     "roboto-fontface": "*",
     "sweetalert": "^2.1.2",
