--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.31",
     "pinia": "^2.1.4",
+    "prettier": "^3.2.5",
     "roboto-fontface": "*",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.7.12",
