--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,21 +15,16 @@
     "crypto-js": "^4.1.1",
     "file-saver": "^2.0.5",
     "js-cookie": "^3.0.5",
-    "js-sha256": "^0.9.0",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.31",
     "pinia": "^2.1.4",
     "prettier": "^3.2.5",
-    "roboto-fontface": "*",
-    "sweetalert": "^2.1.2",
-    "sweetalert2": "^11.7.12",
     "vee-validate": "^4.10.5",
     "vue": "^3.2.13",
     "vue-chartjs": "^5.2.0",
     "vue-cookies": "^1.8.3",
     "vue-router": "^4.2.4",
-    "vuetify": "^3.0.0-beta.0",
-    "webfontloader": "^1.0.0"
+    "vuetify": "^3.0.0-beta.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
