--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,2 +1,3 @@
 VUE_APP_MODE=production
 VUE_APP_API_BASE_URL=http://172.16.0.130:8000/api/
+VUE_APP_TELEGRAM_BASE_TOKEN=https://api.telegram.org/bot6454815254:AAGSFsqSRlS2kBCREs5Kt0NDnVFZjk0fUIU/sendMessage
